# MusicHabits

./: .gitignore  .pre-commit-config.yaml  README.md  history.json  index.html  listening_history.csv  pyproject.toml
.github/workflows/: update_ui.yaml
app/: api_client.py  data_processor.py  main.py  storage.py  ui_template.html  ui_updater.py
tests/: test_data_processor.py  test_storage_ui.py
